<?xml version='1.0' encoding='UTF-8'?>
<resources>
    <string name="app_name">404留言板</string>
    <string name="tips">提示</string>
    <string name="please_choose">请选择</string>
    <string name="share">分享</string>
    <string name="right">好的</string>
    <string name="hardLoading">努力加载中...</string>
    <string name="badNetwork">网络差</string>

    <string name="versionIsAlreadyNew">已经是最新版本了</string>
    <string name="sureToUpdate">确定更新版本吗</string>
    <string name="updateLog">更新日志</string>
    <string name="installNewVersion">安装新版本</string>
    <string name="laterNotify">稍后提醒</string>
    <string name="haveNewVersion">版本更新</string>
    <string name="cancel">取消</string>
    <string name="voice">语音</string>
    <string name="pressToRecord">按住录音</string>
    <string name="pleaseSayMore">说多点吧～</string>
    <string name="failedToGetData">获取数据失败</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="sex">性别</string>
    <string name="status_online">[在线]</string>
    <string name="status_offline">[离线请留言]</string>
    <string name="sending">发送中</string>
    <string name="received">已接收</string>

    <string name="messages">会话</string>
    <string name="contact">联系人</string>
    <string name="action_settings">Settings</string>
    <string name="me">我</string>
    <string name="discover">发现</string>
    <string name="leave_message">留言</string>
    <string name="emptyStr"/>
    <string name="avatar">头像</string>
    <string name="username">用户名</string>
    <string name="nickname">昵称</string>
    <string name="please_input_hint">请输入{0}</string>
    <string name="change_title">{0}</string>
    <string name="sent">已发送</string>
    <string name="failed">失败</string>
    <string name="newMessage">新的消息</string>
    <string name="image">图片</string>
    <string name="cancelRecord">取消录音</string>
    <string name="audio">语音</string>
    <string name="getGeoInfoFailed">获取地理位置信息失败!</string>
    <string name="position">位置</string>
    <string name="geoIsSame">获取坐标相同</string>
    <string name="mapKeyErrorTips">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="cannotFindResult">抱歉，未能找到结果</string>
    <string name="reverseGeoCodeResultIs">反编码得到的地址：</string>

    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="send">发送</string>
    <string name="cannotGetYourAddressInfo">无法获取到您的位置信息！</string>
    <string name="emotion">表情</string>
    <string name="pleaseCheckNetwork">请检查网络</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="ensurePasswordHint">请再次输入密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="ensurePassword">确认密码</string>
    <string name="register">注册</string>

    <string name="password_can_not_null">密码不能为空</string>
    <string name="username_cannot_null">用户名不能为空</string>
    <string name="password_not_consistent">输入的两次密码不一致</string>
    <string name="registerSucceed">注册成功</string>
    <string name="registerFailed">注册失败。</string>

    <string name="not_have_account">还没有账号？</string>
    <string name="register_rightnow">立即注册 &gt;</string>
    <string name="metres">米</string>
    <string name="unknown">未知</string>
    <string name="recent_login_time">最近登录时间:</string>
    <string name="account">账号</string>
    <string name="search">搜索</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="vibrate">震动</string>

    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>

    <string name="new_friends">新朋友</string>

    <string name="deleteFriendRequest">删除好友请求</string>
    <string name="agreed">已同意</string>
    <string name="deleteContact">删除联系人</string>
    <string name="sure">确定</string>
    <string name="deleteSucceed">删除成功</string>
    <string name="findFriends">查找好友</string>
    <string name="dataLoadFinish">数据加载完成</string>
    <string name="add">添加</string>
    <string name="sendRequestSucceed">发送请求成功，等待对方验证</string>
    <string name="personalInfo">个人资料</string>
    <string name="detailInfo">详细资料</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="noResult">无相关结果</string>
    <string name="loadMessagesFinish">聊天记录加载完毕</string>
    <string name="notifySetting">提醒设置</string>
    <string name="notifyWhenNews">接收新消息通知</string>
    <string name="group">群组</string>
    <string name="groupName">群组名</string>
    <string name="create">创建</string>
    <string name="groupMembers">群组成员</string>
    <string name="inviteSucceed">已发出邀请</string>
    <string name="inviteMembers">邀请群成员</string>
    <string name="kickTips">确认要踢走该成员吗</string>
    <string name="invite">邀请</string>
    <string name="kilometres">公里</string>
    <string name="quitGroup">退群</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="checkUpdate">检查更新</string>
    <string name="haveRead">已阅读</string>
    <string name="slideUpToCancel">手指上滑，取消发送</string>
    <string name="releaseToCancel">松开手指，取消录音</string>
    <string name="sessionPausedTips">会话暂停，等网络良好</string>

    <string name="contact_alreadyCreateAddRequest">已经请求过了</string>
    <string name="contact_sendRequestSucceed">该请求已经通过了</string>
    <string name="say_something">说点什么吧。。。</string>

    <string name="about_text_1">对404留言板有任何意见或建议，都可以发送邮件到2212079150@qq.com联系我。\n\n下载地址：http://fir.im/bbs404\n\n或扫描二维码下载：\n\n</string>

</resources>