<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/base_header_layout"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RelativeLayout
                    android:id="@+id/avatarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_selector"
                    android:padding="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:textSize="16sp"
                        android:text="@string/avatar"/>

                <ImageView
                        android:id="@+id/avatar"
                        style="@style/My.ImageView.Photo_Middle"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/default_user_avatar"/>

            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/base_horizontal_line"/>

            <RelativeLayout
                    android:id="@+id/usernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/btn_selector"
                    android:padding="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:textSize="16sp"
                        android:text="@string/username"/>

                <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:text="username"/>

            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/base_horizontal_line"/>

            <RelativeLayout
                    android:id="@+id/sexLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/btn_selector"
                    android:padding="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:textSize="16sp"
                        android:text="@string/sex"/>

                <TextView
                        android:id="@+id/sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:text="sex"/>

            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/base_horizontal_line"/>

            <RelativeLayout
                    android:id="@+id/notifyLayout"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:visibility="gone"
                    android:background="@drawable/btn_selector"
                    android:padding="10dp">

                <TextView
                        android:id="@+id/notifySetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/notifySetting"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:drawablePadding="10dp"
                        android:src="@drawable/register_bottom_arrow"/>
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/updateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/btn_selector"
                    android:padding="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="16sp"
                        android:text="@string/checkUpdate"/>

            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/base_horizontal_line"/>

            <RelativeLayout
                    android:id="@+id/logoutLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/btn_selector"
                    android:padding="10dp">

                <TextView
                        android:id="@+id/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="16sp"
                        android:text="注销"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>